--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 		<p>
 		<p>应用名称：游戏加速器 更新时间：2025-1-6 版本号：版本3.2.22 | <a href="service-agreement.html">《用户协议》</a>|<a href="privacy-agreement.html">《隐私权限》</a></p>
 	</footer>
-	<script>function down(){window.location.href='https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/lvns-H3.18_X64.exe';}</script>
+	<script>function down(){window.location.href='https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/latest_H3-19_X64.exe';}</script>
 
 </body></html>
