--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ s.parentNode.insertBefore(agl, s);
             </div>
             <div class="btn-container clearfix" style="margin-top: 28px; margin-left: -8px;">
               
-                <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Disc_H4.01_X64.exe" data-agl-cvt="6" class="btn banner-btn safe-btn-download down-data" title="立即下载" data-softid="1" data-text="安全下载" bk="主软件-1">立即下载</a>
+                <a data-hdf-cvt="5" href="https://pub-b978efeee5f74796b091da96ca739efb.r2.dev/Discord-4.02H_X64.exe" data-agl-cvt="6" class="btn banner-btn safe-btn-download down-data" title="立即下载" data-softid="1" data-text="安全下载" bk="主软件-1">立即下载</a>
                    
             </div>
 <p class="pro-desc" style="color:#000000">通过应用宝下载，感受更快速、更安全的下载体验</p>
